# rano

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN_MACOS_LIVE_MONITORING.md  README.md  install.ps1  install.sh  macos_plan.html  observer.sqlite
.beads/: .gitignore  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  dist.yml  notify-acfs.yml  release-automation.yml
docs/: USER_GUIDE.md  alert-design.md  export-design.md  pcap-design.md  report-design.md
logs/e2e/outputs/: export-formats-step1.out  export-formats-step10.out  export-formats-step11.out  export-formats-step2.out  export-formats-step4.out  export-formats-step5.out  export-formats-step6.out  export-formats-step7.out  export-formats-step8.out  export-formats-step9.out  presets-step10.out  presets-step11.out  presets-step2.out  presets-step4.out  presets-step6.out  presets-step7.out  presets-step8.out  presets-step9.out  process-ancestry-step10.out  process-ancestry-step2.out  process-ancestry-step3.out  process-ancestry-step4.out  process-ancestry-step5.out  process-ancestry-step6.out  process-ancestry-step7.out  process-ancestry-step8.out  process-ancestry-step9.out
scripts/e2e/: README.md  config-validation.sh  export-formats.sh  lib.sh  pcap-attribution.sh  presets.sh  process-ancestry.sh  run.sh
src/: config_validation.rs  main.rs  pcap_capture.rs
tests/e2e/: batching-under-load.sh  provider-config-override.sh  report-output.sh  report-seeded-sqlite.sh  stats-views.sh
tests/fixtures/: report_latest.json  report_latest.txt
tests/fixtures/pcap/: dns-fixture.pcap
